# osm-revert

./: .env.example  .gitignore  Pipfile  README.md  biome.json  invert.py  main.py  osm.py  overpass.py  pyproject.toml  shell.nix  utils.py
app/: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  config.py  default.nix  dmp_utils.py  invert.py  main.py  osm.py  overpass.py  pyproject.toml  shell.nix  shlink.py  utils.py
app/scripts/: docker-update.sh
icon/: osm-revert.xcf
osm_revert/: __init__.py  config.py  context_logger.py  diff_entry.py  diff_match_patch.py  dmp_utils.py  invert.py  main.py  osm.py  overpass.py  proxy_state.py  utils.py
web/: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  config.py  default.nix  main.py  pkgs.nix  pyproject.toml  revert_worker.py  shell.nix  utils.py
web/scripts/: docker-update.sh
web/static/: browserconfig.xml
web/static/css/: style.css
web/static/js/: authorized.js
web/templates/: _base.html  _base.jinja2  authorized.html  authorized.jinja2  home.html  index.html  index.jinja2
