[project]
dependencies = [
  "aiohttp[speedups]",
  "cachetools",
  "certifi",
  "fastapi",
  "githead",
  "gunicorn",
  "httpx[brotli,zstd]",
  "jinja2",
  "sentry-sdk[fastapi,httpx,aiohttp]",
  "uvicorn[standard]",
  "xmltodict",
]
name = "osm-revert"
requires-python = "~=3.12"
version = "0.0.0"

[tool.uv]
package = false
python-downloads = "never"
python-preference = "only-system"

[tool.setuptools]
packages = ["osm_revert", "web"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".direnv",
  ".git",
  ".ruff_cache",
  ".venv",
  "osm_revert/diff_match_patch.py",
]

indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = []
# see https://docs.astral.sh/ruff/rules/ for rules documentation
select = [
  "A",     # flake8-builtins
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "E4",    # pycodestyle
  "E7",
  "E9",
  "F",     # pyflakes
  "FA",    # flake8-future-annotations
  "FLY",   # flynt  # "FURB", # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "NPY",   # numpy
  "PERF",  # perflint
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "PYI",   # flake8-pyi
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RUF",   # ruff
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "T10",   # flake8-debugger
  "TID",   # flake8-tidy-imports
  "UP",    # pyupgrade
  "W6",
  "YTT",   # flake8-2020
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "open", "type"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 10
